<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.malkomich.nanodegree.ui.activity.MainActivity"
    android:gravity="center_horizontal"
    android:textAlignment="center"
    android:background="@color/windowBackground">

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/menu_title"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_large"/>

    <Button
        android:id="@+id/button_app_1"
        style="@style/MenuButtonTheme"
        android:text="@string/button_app_1"
        android:layout_below="@+id/menu_title"/>

    <Button
        android:id="@+id/button_app_2"
        style="@style/MenuButtonTheme"
        android:text="@string/button_app_2"
        android:layout_below="@id/button_app_1"/>

    <Button
        android:id="@+id/button_app_3"
        style="@style/MenuButtonTheme"
        android:text="@string/button_app_3"
        android:layout_below="@id/button_app_2"/>

    <Button
        android:id="@+id/button_app_4"
        style="@style/MenuButtonTheme"
        android:text="@string/button_app_4"
        android:layout_below="@id/button_app_3"/>

    <Button
        android:id="@+id/button_app_5"
        style="@style/MenuButtonTheme"
        android:text="@string/button_app_5"
        android:layout_below="@id/button_app_4"/>

    <Button
        android:id="@+id/button_app_6"
        style="@style/MenuButtonTheme"
        android:text="@string/button_app_6"
        android:layout_below="@id/button_app_5"/>

</RelativeLayout>
