<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.github.malkomich.nanodegree.ui.activity.PopularMoviesActivity">

    <item
        android:id="@+id/submenu_sort"
        android:title="@string/menu_sort"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_sort">

        <menu>
            <item
                android:id="@+id/action_sort_popularity"
                android:orderInCategory="100"
                android:title="@string/action_sort_popularity"
                app:showAsAction="never"/>

            <item
                android:id="@+id/action_sort_rated"
                android:orderInCategory="100"
                android:title="@string/action_sort_rated"
                app:showAsAction="never"/>
        </menu>

    </item>

    <item
        android:id="@+id/action_filter_favorites"
        android:orderInCategory="100"
        android:title="@string/action_filter_favorites"
        app:showAsAction="never"
        android:checkable="true"/>

</menu>
